# JNI

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: .derry.mp3.icloud
app/src/main/cpp/: CMakeLists.txt  com_example_jni_MainActivity.h  com_example_jni_activity_AdvancedActivity.h  com_example_jni_activity_QQVoiceActivity.h  com_example_jni_activity_SimpleActivity.h  native-advanced-lib.cpp  native-exception-lib.cpp  native-lib.cpp  native-qq-voice-lib.cpp  native-simple-lib.cpp  native-thread-lib.cpp
app/src/main/java/com/example/jni/: MainActivity.java
app/src/main/java/com/example/jni/activity/: AdvancedActivity.java  ExceptionActivity.java  QQVoiceActivity.java  SimpleActivity.java  ThreadActivity.java
app/src/main/java/com/example/jni/bean/: Dog.java  Persion.java  QQBean.java
app/src/main/res/layout/: activity_advanced.xml  activity_exception.xml  activity_main.xml  activity_q_q_voice.xml  activity_simple.xml  activity_thread.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
